--- a/_config.yml
+++ b/_config.yml
@@ -50,10 +50,10 @@ metadata: cb-examples
 #   Enter information for your organization (replacing the CDIL links and name below) if you'd like to brand your site with a logo
 #   To remove the branding, comment out these values, or delete them. 
 #
-organization-name: "Center for Digital Inquiry and Learning (CDIL)"
-organization-link: https://cdil.lib.uidaho.edu/
-organization-logo-banner: https://cdil.lib.uidaho.edu/storying-extinction/assets/img/cdil.png
-organization-logo-nav: https://cdil.lib.uidaho.edu/assets/img/logo.png
+organization-name: "CollectionBuilder"
+organization-link: https://collectionbuilder.github.io/
+organization-logo-banner: assets/img/collectionbuilder-logo.png
+organization-logo-nav: assets/img/collectionbuilder-logo.png
 
 ##########
 # GOOGLE SERVICES [optional!]
