--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -59,9 +59,9 @@ year-nav-increment: 5 # set increments to auto gen nav years
 # 
 # add metadata fields for export in data downloads (tip: paste in first row of csv)
 # comma delimited list, reference url is automatic
-metadata-export-fields: "title,creator,date,description,subject,location,latitude,longitude,source,identifier,type,format,language,rights,rightsstatement"
+metadata-export-fields: "title,format,display_template,object_location,object_link,home_feature,featured_image,cb_template,location,latitude,longitude,description,subject,date,collection_type,institution_type,institution,creator,creator_github,language"
 # generate a facets list for given fields, comma delimited
-metadata-facets-fields: "subject,creator,format"
+metadata-facets-fields: "collection_type,institution_type,institution,subject,creator,format"
 
 ##########
 # Compound Objects 
